@@ -1,3 +1,8 @@
+2003-12-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* openrisc-asm.c: Regenerate.
+	* pj-opc.c: Update copyright date.
+
 2003-12-03  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
 
 	* m32r-asm.c: Regenerate.
